k8s/apps/podinfo/ingress/podinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: podinfo
  namespace: podinfo
spec:
  tls:
    - hosts:
        - podinfo.s.h-a.cc
      secretName: podinfo-tls
  rules:
    - host: podinfo.s.h-a.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  name: http
